# rust-utilitarios

./: .gitignore  Cargo.toml  Makefile  README.md  arvore.rs
interpola/: Cargo.toml  build.rs
interpola/include/: interpolacao.h
interpola/src/: dir_and_files_trees.rs  lib.rs  tables.rs  tree.rs  written_numerals.rs
interpola/tests/: amostras.c  animais.txt  tables.c  teste_wn.c  tree-config.c  tree.c
interpola_c/: Cargo.toml  interpola_c.h  teste_tree.c  teste_wn.c
interpola_c/src/: dir_and_files_trees.rs  lib.rs  written_numerals.rs
src/: Cargo.toml  aleatorio.rs  arvore.rs  barra_de_progresso.rs  impressao.rs  legivel.rs  lib.rs  pilha_array.rs  por_extenso.rs  porextenso.rs  progresso.rs  queue.rs  romanos.rs  tabela_visualizacao.rs  tabelas.rs  tela.rs  tela_auxiliar.rs  terminal.rs  terminal_dimensao.rs  unitarios.rs
src/aleatorio/: aleatorio.rs  barra_de_progresso.rs  gerador.rs  impressao.rs  metodo_i.rs  metodo_ii.rs  metodo_iii.rs  testes.rs  testes_unitarios.rs
src/arvore/: constroi_simbolos.rs  utilidades.rs
src/barra_de_progresso/: progressosimples.rs  unitarios.rs
src/legivel/: aproxima.rs  arredonda.rs  decimal.rs  fracao_seg.rs  generico.rs
src/progresso/: barra.rs  letreiro.rs  rotulo.rs  unitarios.rs
src/tabela_visualizacao/: matriz_texto.rs  objeto.rs  revestimento.rs  string_complemento.rs  tabelacao.rs
src/tabelas/: iterador.rs  macros.rs  matriz_texto.rs  objeto.rs  revestimento.rs  string_complemento.rs  tabelacao.rs
tests/: aleatorio.rs  modulo_aleatorio.rs  tipos_de_barras_de_progresso.rs  trabalho_com_numeros.rs
(+2 files in other folders)
