[package]
name        = "utilitarios"
version     = "1.6.0"
edition     = "2018"
license     = "mit"
readme      = "README.md"
repository  = "https://github.com/patrick7star/rust-utilitarios"
# Tal pacote data desta versão, 2019 acho?!
rust-version = "1.40"

[profile.dev]
opt-level=0
[profile.release]
opt-level=3

[workspace]
members = ["interpola_c"]

